--- a/latest/server/biomes.json
+++ b/latest/server/biomes.json
@@ -53,6 +53,10 @@
   "savanna": {},
   "savanna_rock": {},
   "sky": {},
+  "sky_island_barren": {},
+  "sky_island_high": {},
+  "sky_island_low": {},
+  "sky_island_medium": {},
   "smaller_extreme_hills": {},
   "stone_beach": {},
   "swampland": {},
