--- a/latest/server/biomes.json
+++ b/latest/server/biomes.json
@@ -3,16 +3,18 @@
   "birch_forest": {},
   "birch_forest_hills": {},
   "cold_beach": {},
-  "cold_deep_ocean": {},
   "cold_ocean": {},
+  "deep_cold_ocean": {},
+  "deep_frozen_ocean": {},
+  "deep_lukewarm_ocean": {},
   "deep_ocean": {},
+  "deep_warm_ocean": {},
   "desert": {},
   "desert_hills": {},
   "extreme_hills": {},
   "extreme_hills_with_trees": {},
   "forest": {},
   "forest_hills": {},
-  "frozen_deep_ocean": {},
   "frozen_ocean": {},
   "frozen_river": {},
   "hell": {},
@@ -21,7 +23,6 @@
   "jungle": {},
   "jungle_edge": {},
   "jungle_hills": {},
-  "lukewarm_deep_ocean": {},
   "lukewarm_ocean": {},
   "mesa": {},
   "mesa_clear_rock": {},
@@ -70,6 +71,5 @@
   "taiga_cold_hills": {},
   "taiga_hills": {},
   "void": {},
-  "warm_deep_ocean": {},
   "warm_ocean": {}
 }
