--- a/latest/server/biomes.json
+++ b/latest/server/biomes.json
@@ -1,9 +1,12 @@
 {
-  "beaches": {},
+  "badlands": {},
+  "badlands_plateau": {},
+  "beach": {},
   "birch_forest": {},
   "birch_forest_hills": {},
-  "cold_beach": {},
   "cold_ocean": {},
+  "dark_forest": {},
+  "dark_forest_hills": {},
   "deep_cold_ocean": {},
   "deep_frozen_ocean": {},
   "deep_lukewarm_ocean": {},
@@ -11,65 +14,62 @@
   "deep_warm_ocean": {},
   "desert": {},
   "desert_hills": {},
-  "extreme_hills": {},
-  "extreme_hills_with_trees": {},
+  "desert_lakes": {},
+  "end_barrens": {},
+  "end_highlands": {},
+  "end_midlands": {},
+  "eroded_badlands": {},
+  "flower_forest": {},
   "forest": {},
-  "forest_hills": {},
   "frozen_ocean": {},
   "frozen_river": {},
-  "hell": {},
-  "ice_flats": {},
-  "ice_mountains": {},
+  "giant_spruce_taiga": {},
+  "giant_spruce_taiga_hills": {},
+  "giant_tree_taiga": {},
+  "giant_tree_taiga_hills": {},
+  "gravelly_mountains": {},
+  "ice_spikes": {},
   "jungle": {},
   "jungle_edge": {},
   "jungle_hills": {},
   "lukewarm_ocean": {},
-  "mesa": {},
-  "mesa_clear_rock": {},
-  "mesa_rock": {},
-  "mushroom_island": {},
-  "mushroom_island_shore": {},
-  "mutated_birch_forest": {},
-  "mutated_birch_forest_hills": {},
-  "mutated_desert": {},
-  "mutated_extreme_hills": {},
-  "mutated_extreme_hills_with_trees": {},
-  "mutated_forest": {},
-  "mutated_ice_flats": {},
-  "mutated_jungle": {},
-  "mutated_jungle_edge": {},
-  "mutated_mesa": {},
-  "mutated_mesa_clear_rock": {},
-  "mutated_mesa_rock": {},
-  "mutated_plains": {},
-  "mutated_redwood_taiga": {},
-  "mutated_redwood_taiga_hills": {},
-  "mutated_roofed_forest": {},
-  "mutated_savanna": {},
-  "mutated_savanna_rock": {},
-  "mutated_swampland": {},
-  "mutated_taiga": {},
-  "mutated_taiga_cold": {},
+  "modified_badlands_plateau": {},
+  "modified_gravelly_mountains": {},
+  "modified_jungle": {},
+  "modified_jungle_edge": {},
+  "modified_wooded_badlands_plateau": {},
+  "mountain_edge": {},
+  "mountains": {},
+  "mushroom_field_shore": {},
+  "mushroom_fields": {},
+  "nether": {},
   "ocean": {},
   "plains": {},
-  "redwood_taiga": {},
-  "redwood_taiga_hills": {},
   "river": {},
-  "roofed_forest": {},
   "savanna": {},
-  "savanna_rock": {},
-  "sky": {},
-  "sky_island_barren": {},
-  "sky_island_high": {},
-  "sky_island_low": {},
-  "sky_island_medium": {},
-  "smaller_extreme_hills": {},
-  "stone_beach": {},
-  "swampland": {},
+  "savanna_plateau": {},
+  "shattered_savanna": {},
+  "shattered_savanna_plateau": {},
+  "small_end_islands": {},
+  "snowy_beach": {},
+  "snowy_mountains": {},
+  "snowy_taiga": {},
+  "snowy_taiga_hills": {},
+  "snowy_taiga_mountains": {},
+  "snowy_tundra": {},
+  "stone_shore": {},
+  "sunflower_plains": {},
+  "swamp": {},
+  "swamp_hills": {},
   "taiga": {},
-  "taiga_cold": {},
-  "taiga_cold_hills": {},
   "taiga_hills": {},
-  "void": {},
-  "warm_ocean": {}
+  "taiga_mountains": {},
+  "tall_birch_forest": {},
+  "tall_birch_hills": {},
+  "the_end": {},
+  "the_void": {},
+  "warm_ocean": {},
+  "wooded_badlands_plateau": {},
+  "wooded_hills": {},
+  "wooded_mountains": {}
 }
